# Perceptron

./: ActivateFunction.cpp  ActivateFunction.h  CMakeLists.txt  DatasetReader.cpp  DatasetReader.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h  main.cpp
src/: ActivateFunction.cpp  ActivateFunction.h  DatasetReader.cpp  DatasetReader.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h  Render.cpp  Render.h  main.cpp
